--- a/source/index.html
+++ b/source/index.html
@@ -19,12 +19,13 @@
           <img src="img/logo-mobile-header.png" class="page-header__logo-page-image" alt="" width="101" height="18">
         </a>
         <a class="page-header__logo-mobile_menu">
-          <img src="img/m-close.png" class="page-header__logo-menu-image" alt="" width="24" height="18">
+          <img src="img/icon-close.svg" class="page-header__logo-menu-image" alt="" width="24" height="18">
         </a>
       </div>
       <nav class="menu-main">
         <ul class="menu-main__sub">
-          <li class="menu-main__sub-menu-elem"><a href="#" class="menu-main__sub-menu-elem-link">Главная</a></li>
+          <li class="menu-main__sub-menu-elem"><a href="index.html" class="menu-main__sub-menu-elem-link">Главная</a>
+          </li>
           <li class="menu-main__sub-menu-elem"><a href="catalog.html" class="menu-main__sub-menu-elem-link">Каталог
               продукции</a></li>
           <li class="menu-main__sub-menu-elem"><a href="form.html" class="menu-main__sub-menu-elem-link">Подбор
@@ -189,7 +190,7 @@
         <a href="https://htmlacademy.ru" class="right-logo__link-organization">
           HTML Academy
         </a>
-        <img src="img/htmlacademy-footer-logo.png" alt="" class="right-logo__logo-organization">
+        <img src="img/htmlaademy-footer-logo.png" alt="" class="right-logo__logo-organization" width="27" height="34">
       </div>
     </div>
     </div>
