закончил таблет версию форм штмл и каталог штмл

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -263,7 +263,7 @@
             Питьевая вода
           </span>
           <div class="additional-goods__article-content">
-            <span class="additional-goods__article-how-many-weight">
+            <span class="additional-goods__article-how-many-weight additional-goods__article-five-litres">
               5 литров
             </span>
             <span additional-goods__article-how-many-price>
