--- a/source/form.html
+++ b/source/form.html
@@ -104,16 +104,19 @@
     </textarea>
     </div>
     <div class="form__sub-additional">
+      <div class="forsm__sub-additional-left-line"></div>
       <span class="form__sub-add">Дополнительно</span>
       <div class="forsm__sub-additional-line"></div>
     </div>
     <div class="form__checkboxes">
+<div class="form__sub-two-checkbox">
       <div class="form__sub-checkbox">
         <input type="checkbox" name="sugarchange" id="sugarchange"
           class="form__sub-input-sugarchange form__checkboxes-sub-input" checked>
         <label for="sugarchange"
           class="form__sub-label-sugarchange form__sub-contact-additional-data form__checkbox-label">Сахарозаменитель</label>
       </div>
+
       <div class="form__sub-checkbox">
         <input type="checkbox" id="drink-water" name="drink-water"
           class="form__sub-input-drink-water form__checkboxes-sub-input">
@@ -121,11 +124,14 @@
           class="form__sub-label-drink-water form__sub-contact-additional-data form__checkbox-label">Питьевая
           вода</label>
       </div>
+    </div>
+      <div class="form__sub-two-checkbox">
       <div class="form__sub-checkbox">
         <input type="checkbox" name="milk" id="milk" class="form__sub-input-milk form__checkboxes-sub-input">
         <label for="milk"
           class="form__sub-label-milk form__sub-contact-additional-data form__checkbox-label">Молоко</label>
       </div>
+
       <div class="form__sub-checkbox">
         <input type="checkbox" id="vitamines" name="vitamines"
           class="form__sub-input-vitamines form__checkboxes-sub-input">
@@ -133,22 +139,23 @@
           class="form__sub-label-vitamines form__sub-contact-additional-data form__checkbox-label">Витамины</label>
       </div>
     </div>
+    </div>
     <div class="form__submit">
       <input type="submit" class="form__submit-input" value="Отправить заявку">
       <span class="form__required-fields-text">* — Обязательные поля</span>
     </div>
     </form>
-    <div class="communicating communicating-form">
+    <div class="communicating communicating-form communicating-form-transformed">
       <div class="communicating__main-text">
         <span class="communicating__offer-communicating">приглашаем к сотрудничеству дилеров!</span>
-        <span class="communicating__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</span>
+        <span class="communicating__address">ул. Большая Конюшенная, д. 19/8 <span class="communicating__address-city">Санкт-Петербург</span></span>
       </div>
     </div>
     <div class="map">
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d20307.5497561974!2d30.498387490673824!3d50.48869895940726!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sua!4v1586080633832!5m2!1sru!2sua"
         width="600" height="363" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"
-        class="map__iframe"></iframe>
+        class="map__iframe map__iframe-form"></iframe>
     </div>
 
   </main>
