--- a/source/index.html
+++ b/source/index.html
@@ -12,10 +12,15 @@
   <header class="page-header">
     <div class="page-header__menu">
       <div class="page-header__menu-logos-links">
-        <a href="" class="page-header__logo-site">
-          <img src="img/logo-mobile.png" alt="logo site" class="page-header__logo-site-image" width="33" height="38">
+        <a href="index.html" class="page-header__logo-site">
+          <img src="img/logo-mobile.png" alt="logo header-mobile site" class="page-header__logo-site-image-mobile"
+            width="33" height="38">
+          <img src="img/logo-tablet.svg" alt="logo header-tablet site" class="page-header__logo-site-image-tablet"
+            width="187" height="58">
+          <img src="img/logo-desktop.svg" alt="logo header-desktop site" class="page-header__logo-site-image-desktop"
+            width="173" height="58">
         </a>
-        <a href="" class="page-header__logo-page">
+        <a href="index.html" class="page-header__logo-mobile-page">
           <img src="img/logo-mobile-header.png" class="page-header__logo-page-image" alt="" width="101" height="18">
         </a>
         <a class="page-header__logo-mobile_menu">
@@ -24,23 +29,27 @@
       </div>
       <nav class="menu-main">
         <ul class="menu-main__sub">
-          <li class="menu-main__sub-menu-elem"><a href="index.html" class="menu-main__sub-menu-elem-link">Главная</a>
+          <li class="menu-main__sub-menu-elem"><a href="index.html"
+              class="menu-main__sub-menu-elem-link menu-main__sub-menu-elem-link-active">Главная</a>
           </li>
-          <li class="menu-main__sub-menu-elem"><a href="catalog.html" class="menu-main__sub-menu-elem-link">Каталог
+          <li class="menu-main__sub-menu-elem "><a href="catalog.html" class="menu-main__sub-menu-elem-link ">Каталог
               продукции</a></li>
           <li class="menu-main__sub-menu-elem"><a href="form.html" class="menu-main__sub-menu-elem-link">Подбор
               программы</a></li>
         </ul>
       </nav>
     </div>
-    <div class="header-background">
-      <h1 class="header-background__main-words">Функциональное питание для котов</h1>
-      <h2 class="header-background__work-for-your-cat">Занялся собой? Займись котом!</h2>
-      <img src="img/index-can-mobile.png" alt="index-can-mobile" class="header-background__img">
-    </div>
+  </header>
+  <div class="header-background">
+    <h1 class="header-background__main-words">Функциональное питание для котов</h1>
+    <h2 class="header-background__work-for-your-cat">Занялся собой? Займись котом!</h2>
+    <img src="img/index-can-mobile.png" alt="index-can-mobile" class="header-background__mobile-img">
+    <img src="img/index-can-tablet.png" alt="index-can-tablet" class="header-background__tablet-img">
+    <a href="" class="check-your-program"> Подобрать программу</a>
+  </div>
   </header>
   <main class="main">
-    <a href="" class="check-your-program"> Подобрать программу</a>
+
     <section class="programs">
       <div class="programs__program">
         <div class="programs__header-program">
